# ruflo

./: package-lock.json  package.json
.github/workflows/: gaia-benchmark.yml  v3-ci.yml
aperture/: Cargo.toml  README.md
aperture/crates/aperture-core/src/: ast.rs  grammar.rs
aperture/crates/aperture-data/: Cargo.toml
aperture/crates/aperture-data/src/: lib.rs  stub.rs
aperture/crates/aperture-swarm/src/: lib.rs  native_stdio.rs
aperture/crates/aperture-tui/: Cargo.toml
aperture/crates/aperture-tui/src/: app.rs  main.rs
aperture/crates/aperture-wasm/: Cargo.toml
aperture/crates/aperture-wasm/src/: lib.rs  shell.rs
bench-witness/: ledger.json
docs/benchmarks/runs/: gaia-l1-iter64-dag-5q-pilot.json
plugins/ruflo-aperture/: README.md
plugins/ruflo-aperture/.claude-plugin/: plugin.json
plugins/ruflo-aperture/agents/: chart.md  oracle.md  quote.md  watchlist.md
plugins/ruflo-aperture/commands/: aperture.md
plugins/ruflo-aperture/scripts/: smoke.sh
plugins/ruflo-graph-intelligence/: package-lock.json
plugins/ruflo-metaharness/scripts/: smoke.sh
ruflo/: package.json
scripts/: audit-no-default-export-leak.mjs  smoke-gaia-bench-schema.mjs
v3/@claude-flow/browser/: package-lock.json
v3/@claude-flow/cli/: package.json
v3/@claude-flow/embeddings/: package.json
v3/@claude-flow/embeddings/src/: index.ts  (+1 more)
v3/docs/adr/: ADR-121-embeddings-ruvector-upgrade.md  ADR-134-ruflo-native-gaia-agent-intelligence-integration.md  ADR-139-multi-model-ensemble.md  README.md
v3/goal_ui/: .optimization-plan.md  .ruflo-integration-plan.md  vite.config.ts
(+80 files in other folders)
